--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name romatrooy-autodocclean-48e5.twc1.net;
     
-    # Перенаправление на HTTPS
+    # Редирект на HTTPS
     location / {
         return 301 https://$host$request_uri;
     }
@@ -12,9 +12,13 @@ server {
     listen 443 ssl;
     server_name romatrooy-autodocclean-48e5.twc1.net;
 
-    # SSL сертификаты - Timeweb может предоставить автоматически
-    # ssl_certificate /etc/nginx/ssl/fullchain.pem;
-    # ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+    # Самоподписанный сертификат
+    ssl_certificate /etc/nginx/ssl/nginx.crt;
+    ssl_certificate_key /etc/nginx/ssl/nginx.key;
+    
+    # Настройки SSL
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers off;
     
     # Frontend
     location / {
