Added SSL support with self-signed certificates for nginx

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name romatrooy-autodocclean-48e5.twc1.net;
     
-    # Редирект на HTTPS
+    # Перенаправление на HTTPS
     location / {
         return 301 https://$host$request_uri;
     }
@@ -12,13 +12,16 @@ server {
     listen 443 ssl;
     server_name romatrooy-autodocclean-48e5.twc1.net;
 
-    # Самоподписанный сертификат
+    # SSL сертификаты
     ssl_certificate /etc/nginx/ssl/nginx.crt;
     ssl_certificate_key /etc/nginx/ssl/nginx.key;
     
     # Настройки SSL
     ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers off;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 1h;
     
     # Frontend
     location / {
