--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -37,6 +37,8 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
+    volumes:
+      - ./data/postgres:/var/lib/postgresql/data
     networks:
       - app-network
     healthcheck:
