--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -37,8 +37,6 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
-    volumes:
-      - ./data/postgres:/var/lib/postgresql/data
     networks:
       - app-network
     healthcheck:
@@ -48,15 +46,15 @@ services:
       retries: 5
 
   nginx:
-    image: nginx:latest
+    build:
+      context: .
+      dockerfile: Dockerfile.nginx
     restart: always
     ports:
       - "80:80"
     depends_on:
       - backend
       - frontend
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
     networks:
       - app-network
 
