Configure for HTTP only

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -46,12 +46,12 @@ services:
       retries: 5
 
   nginx:
-    build:
-      context: .
-      dockerfile: Dockerfile.nginx
+    image: nginx:latest
     restart: always
     ports:
       - "80:80"
+    volumes:
+      - ./nginx:/etc/nginx/conf.d
     depends_on:
       - backend
       - frontend
