--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,27 +2,6 @@ server {
     listen 80;
     server_name romatrooy-autodocclean-48e5.twc1.net;
     
-    # Перенаправление на HTTPS
-    location / {
-        return 301 https://$host$request_uri;
-    }
-}
-
-server {
-    listen 443 ssl;
-    server_name romatrooy-autodocclean-48e5.twc1.net;
-
-    # SSL сертификаты
-    ssl_certificate /etc/nginx/ssl/nginx.crt;
-    ssl_certificate_key /etc/nginx/ssl/nginx.key;
-    
-    # Настройки SSL
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
-    ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 1h;
-    
     # Frontend
     location / {
         proxy_pass http://frontend:3000;
@@ -51,4 +30,43 @@ server {
         expires 365d;
         add_header Cache-Control "public, max-age=31536000, immutable";
     }
-} 
+}
+
+# Раскомментируйте этот блок после настройки SSL
+# server {
+#     listen 443 ssl;
+#     server_name romatrooy-autodocclean-48e5.twc1.net;
+#
+#     # SSL сертификаты - Timeweb может предоставить автоматически
+#     # ssl_certificate /etc/nginx/ssl/fullchain.pem;
+#     # ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+#     
+#     # Frontend
+#     location / {
+#         proxy_pass http://frontend:3000;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#     }
+#     
+#     # Backend API
+#     location /api/v1 {
+#         proxy_pass http://backend:8000/api/v1;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#     }
+#     
+#     # Статические файлы Next.js
+#     location /_next/static {
+#         proxy_pass http://frontend:3000/_next/static;
+#         proxy_set_header Host $host;
+#         proxy_cache_bypass $http_upgrade;
+#         proxy_set_header Upgrade $http_upgrade;
+#         proxy_set_header Connection 'upgrade';
+#         expires 365d;
+#         add_header Cache-Control "public, max-age=31536000, immutable";
+#     }
+# } 
